# TurkuAMK

./: README.md
Iot_BigData/: Lab_1.3.2.9_PedroSerrano_AnnaYabe.html  Lab_2.2.4.5_AnnaYabe_PedroSerrano.html  Lab_2.5.1.4 _AnnaYabe_PedroSerrano.html  Lab_2.5.2.4_AnnaYabe_PedroSerrano.html  Lab_2.5.2.5_AnnaYabe_PedroSerrano.html  Lab_3.1.1.5_AnnaYabe_PedroSerrano.html  Lab_3.1.4.6_AnnaYabe_PedroSerrano.html  Lab_4.1.2.4_AnnaYabe_PedroSerrano.html  Lab_4.1.3.5_AnnaYabe_PedroSerrano.html  Lab_4.1.3.5_AnnaYabe_PedroSerrano_Extra.html  Lab_6.4.1.2_PedroSerrano_AnnaYabe.ipynb  Lab_6.4.1.3_PedroSerrano_AnnaYabe.ipynb  Lab_6.4.1.4_PedroSerrano_AnnaYabe.ipynb
Iot_Security/: 1.1.1.6 Lab - Shodan Search.docx  3.2.2.7 Lab - Compromise IoT Device Firmware.docx  4.1.2.3 Lab - Sniffing Bluetooth with the Raspberry Pi.docx  Lab_1.2.3.2_PedroSerrano_AnnaYabe_Answers.txt  Lab_1.2.3.4_PedroSerrano_AnnaYabe_Answers.docx
Sensors-and-Signaling/: README.md
Sensors-and-Signaling/Digital signal processing/: Filter.mlx  Filter_design.m  demo.m  digital_filter_implementation.fda  digital_filter_implementation.slx  digital_filter_implementation.vhd  digital_filter_implementation_compile.do  digital_filter_implementation_tb.vhd  digital_filter_implementation_tb_compile.do  digital_filter_implementation_tb_sim.do  ecg.m  ecg.txt  ecg_filter.fda  ecg_filter.m  filter.fda  imu.txt
Sensors-and-Signaling/Digital signal processing/Filter0_ert_rtw/: Filter0.c  Filter0.h  Filter0.mk  Filter0_data.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Sensors-and-Signaling/Digital signal processing/Filter0_ert_rtw/tmwinternal/: tr
Sensors-and-Signaling/Resistive Sensors/: NTC_batch.txt  batch_ntc_bridge_beta_linearization.m  ntc_batch.m  ntc_bridge_beta_linearization.m  ntc_bridge_steinhart_linearization.m  uncertainty.m
Sensors-and-Signaling/Sensor Fusion/: falling_body_basic.m  falling_body_prediction.m  falling_body_sensor_fusion.m
Sensors-and-Signaling/adc with imparments/: adc_quant_spectral.m
eletro-lab-exercises-res/: README.md
eletro-lab-exercises-res/LAB01/: lab1_res.md
eletro-lab-exercises-res/LAB01/LTPot/: Lab1.asc  pot.asc  pot.asy
eletro-lab-exercises-res/LAB02/: lab2_res.md
eletro-lab-exercises-res/LAB02/LTSpice/: Lab2_cond.asc  Lab2_ind.asc
eletro-lab-exercises-res/LAB03/: Lab3_res.md
eletro-lab-exercises-res/LAB03/LTSpice/: Lab3_Part1.asc  Lab3_Part2.asc
eletro-lab-exercises-res/LAB04/: lab4_res.md
eletro-lab-exercises-res/LAB04/LTSpice/: NPN.asc  NPN_LED.asc  PNP.asc  PNP_LED.asc
eletro-lab-exercises-res/LAB04/Picoscope/: NPN_LED_voltage.psdata  NPN_SemLED.psdata  PNP_LED.psdata  PNP_SemLED.psdata  npn_led_resistence.psdata
eletro-lab-exercises-res/LAB05/LTSpice/: inverting_opa.asc  noninverting_opa.asc  summing_ inverting_ amplifier.asc  voltage_follower.asc
eletro-lab-exercises-res/LAB05/Picoscope/: 2_c.psdata  3_a.psdata  3_b.psdata  3_c.psdata  6.psdata  slew_rate_picoscope.psdata  summing_ inverting_ amplifier.psdata  summing_ noninverting_ amplifier.psdata
embedded-linux-labs/: README.md
embedded-linux-labs/lab1/: README.md  compilation_process.md  git_tutorial.md
embedded-linux-labs/lab1/native-build-hello/: lab1.c
embedded-linux-labs/lab10/: listen-ruuvitags.py  readme.md  requirements.txt
embedded-linux-labs/lab10/results/: notes.md
embedded-linux-labs/lab10/src/: copy_stuff.sh  lab10.py
embedded-linux-labs/lab2/: CMakeLists.txt  Compilation_process_and_libraries.md  README.md  hello.c  howto-create-vscode-projects.md  libraries.md  raspi-init.sh
embedded-linux-labs/lab2/cmake/: armv6-rpi-linux-gnueabihf.cmake
embedded-linux-labs/lab3/: CMakeLists.txt  README.md  assignment2.csv  configuring-gpio-pin-pullup.md  copy_stuff.sh  lab3_answers.txt  lab3_hw_setup.md
embedded-linux-labs/lab3/src/: libgpiod-input.c  libgpiod-led.c
embedded-linux-labs/lab4/: readme.md
embedded-linux-labs/lab4/4.0/: copy_stuff.sh  cron_blink.txt  cron_motor.txt  cron_motor_extended.txt  readme.md
embedded-linux-labs/lab4/4.0/lab4.0-ledoff/: CMakeLists.txt
embedded-linux-labs/lab4/4.0/lab4.0-ledoff/src/: lab4-ledoff.c
embedded-linux-labs/lab4/4.0/lab4.0-ledon/: CMakeLists.txt
embedded-linux-labs/lab4/4.0/lab4.0-ledon/src/: lab4-ledon.c
embedded-linux-labs/lab4/4.0/lab4.0-motor/: CMakeLists.txt  copy_stuff.sh
embedded-linux-labs/lab4/4.0/lab4.0-motor/src/: pump.c
embedded-linux-labs/lab4/4.1/: CMakeLists.txt  main.c  readme.md  timers_init.h  timers_init_mod.c
embedded-linux-labs/lab4/4.2/: CMakeLists.txt  copy_stuff.sh  main.c  readme.md  timers_init.c  timers_init_mod.c
embedded-linux-labs/lab5/: CMakeLists.txt  README.md
embedded-linux-labs/lab5/src/: event_test_with_threads.c  event_test_with_threads_debounce.c  event_test_without_threads.c  main.c
embedded-linux-labs/lab6/: CMakeLists.txt  Filtering_noise_on_signal_lines.md  copy_stuff.sh  readme.md
embedded-linux-labs/lab6/src/: event_test_with_threads_debounce.c
embedded-linux-labs/lab7/: CMakeLists.txt  copy_stuff.sh  readme.md
embedded-linux-labs/lab7/mqtt-raspi/: mqtt-raspi.c
embedded-linux-labs/lab7/mqtt-vm/: mqtt-vm
embedded-linux-labs/lab8/: Readme.md
embedded-linux-labs/lab8/results/: errors.txt
embedded-linux-labs/lab9/: Readme.md  poll-demo.html  pydemo.py
embedded-linux-labs/lab9/9.3/: CMakeLists.txt  main.c  parser.c
embedded-linux-labs/lab9/9.4/: CMakeLists.txt  time.c
embedded-linux-labs/lab9/9.4/results/: load20rate.txt
embedded-linux-labs/lab9/results/: 9.3.html  mypythom.html  servo.html
vhdl_lab_exercises_res/: .gitignore  readme.md
vhdl_lab_exercises_res/LAB1_Setup/: lab1_res.xpr  lab1_template.vhd
vhdl_lab_exercises_res/LAB1_Setup/Source/constr/: pynq-z2_v1.0.xdc
vhdl_lab_exercises_res/LAB1_Setup/Source/vhdl/: lab1_template.vhd
vhdl_lab_exercises_res/LAB2_Combinatorial_Logic/: Questions.txt  lab2_res.xpr
vhdl_lab_exercises_res/LAB3_Counters/: lab3_answers.txt  lab3_res.xpr  lab3_template.vhd
vhdl_lab_exercises_res/LAB4_Button_With_Repeat/: lab4_res.xpr
(+16 files in other folders)
